Glazed terracotta implemented. Not yet converted from Anvil ID's.,

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -104,11 +104,14 @@
     <Compile Include="Blocks\BirchDoor.cs" />
     <Compile Include="Blocks\BirchFenceGate.cs" />
     <Compile Include="Blocks\BirchWoodStairs.cs" />
+    <Compile Include="Blocks\BlackGlazedTerracotta.cs" />
     <Compile Include="Blocks\BlockStairs.cs" />
+    <Compile Include="Blocks\BlueGlazedTerracotta.cs" />
     <Compile Include="Blocks\BookShelf.cs" />
     <Compile Include="Blocks\BrewingStand.cs" />
     <Compile Include="Blocks\Bricks.cs" />
     <Compile Include="Blocks\BrickStairs.cs" />
+    <Compile Include="Blocks\BrownGlazedTerracotta.cs" />
     <Compile Include="Blocks\BrownMushroom.cs" />
     <Compile Include="Blocks\BrownMushroomBlock.cs" />
     <Compile Include="Blocks\Button.cs" />
@@ -124,6 +127,7 @@
     <Compile Include="Blocks\Cobweb.cs" />
     <Compile Include="Blocks\Cocoa.cs" />
     <Compile Include="Blocks\Crops.cs" />
+    <Compile Include="Blocks\CyanGlazedTerracotta.cs" />
     <Compile Include="Blocks\DarkOakDoor.cs" />
     <Compile Include="Blocks\DoubleRedSandstoneSlab.cs" />
     <Compile Include="Blocks\DragonEgg.cs" />
@@ -133,22 +137,33 @@
     <Compile Include="Blocks\EndGateway.cs" />
     <Compile Include="Blocks\EndPortal.cs" />
     <Compile Include="Blocks\EndRod.cs" />
+    <Compile Include="Blocks\GlazedTerracotta.cs" />
+    <Compile Include="Blocks\GrayGlazedTerracotta.cs" />
+    <Compile Include="Blocks\GreenGlazedTerracotta.cs" />
     <Compile Include="Blocks\Hopper.cs" />
     <Compile Include="Blocks\JungleDoor.cs" />
+    <Compile Include="Blocks\LightBlueGlazedTerracotta.cs" />
+    <Compile Include="Blocks\LimeGlazedTerracotta.cs" />
     <Compile Include="Blocks\LitRedstoneOre.cs" />
+    <Compile Include="Blocks\MagentaGlazedTerracotta.cs" />
     <Compile Include="Blocks\MelonStem.cs" />
     <Compile Include="Blocks\Observer.cs" />
+    <Compile Include="Blocks\OrangeGlazedTerracotta.cs" />
+    <Compile Include="Blocks\PinkGlazedTerracotta.cs" />
     <Compile Include="Blocks\Piston.cs" />
     <Compile Include="Blocks\PistonHead.cs" />
     <Compile Include="Blocks\PoweredComparator.cs" />
     <Compile Include="Blocks\Prismarine.cs" />
+    <Compile Include="Blocks\PurpleGlazedTerracotta.cs" />
     <Compile Include="Blocks\PurPur.cs" />
     <Compile Include="Blocks\PumpkinStem.cs" />
     <Compile Include="Blocks\PurPurStairs.cs" />
+    <Compile Include="Blocks\RedGlazedTerracotta.cs" />
     <Compile Include="Blocks\RedSandstone.cs" />
     <Compile Include="Blocks\RedSandstoneSlab.cs" />
     <Compile Include="Blocks\RedSandstoneStairs.cs" />
     <Compile Include="Blocks\SeaLantern.cs" />
+    <Compile Include="Blocks\SilverGlazedTerracotta.cs" />
     <Compile Include="Blocks\Slime.cs" />
     <Compile Include="Blocks\SpruceDoor.cs" />
     <Compile Include="Blocks\StainedGlass.cs" />
@@ -157,6 +172,7 @@
     <Compile Include="Blocks\UnpoweredComparator.cs" />
     <Compile Include="Blocks\Wheat.cs" />
     <Compile Include="Blocks\RedMushroom.cs" />
+    <Compile Include="Blocks\WhiteGlazedTerracotta.cs" />
     <Compile Include="Blocks\YellowFlower.cs" />
     <Compile Include="Blocks\DarkOakFenceGate.cs" />
     <Compile Include="Blocks\DaylightDetector.cs" />
@@ -295,6 +311,7 @@
     <Compile Include="Blocks\WoodSlab.cs" />
     <Compile Include="Blocks\Tnt.cs" />
     <Compile Include="Blocks\Wool.cs" />
+    <Compile Include="Blocks\YellowGlazedTerracotta.cs" />
     <Compile Include="CertificateChain.cs" />
     <Compile Include="CertificateData.cs" />
     <Compile Include="ConnectionState.cs" />
