Works with EDU.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -4,7 +4,7 @@
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeStartGame=1
 TracePackets.Verbosity.McpeAdventureSettings=1
