--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -19,13 +19,13 @@ UseEncryption=false
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 
 ViewDistance=10
 MaxViewDistance=10
 MoveRenderDistance=1
-CalculateLights=false
+CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Gamerules
@@ -58,9 +58,10 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
-PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+#PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
+PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
 #PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
@@ -92,7 +93,7 @@ Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeInteract
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeAddEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
