Support Education Edition (MCEE). Minor differences on some minor things,but mostly compatible with MCPE.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -2,7 +2,7 @@
 
 # Socket binding
 #ip=0.0.0.0
-#port=19134
+port=19134
 
 # Throttling
 MaxNumberOfPlayers=100
@@ -18,14 +18,15 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
+EnableEdu = true;
 
-WorldProvider=anvil
-#WorldProvider=flat
+#WorldProvider=anvil
+WorldProvider=flat
 
-ViewDistance=10
-MaxViewDistance=10
+ViewDistance=12
+MaxViewDistance=12
 MoveRenderDistance=1
-CalculateLights=true
+CalculateLights=false
 CalculateLights.MakeMovie=false
 
 # Gamerules
@@ -61,7 +62,8 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
-PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
+#PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
+PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
 #PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
