Fix batch compression again. It is now named McpeWrapper.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,7 +18,7 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-EnableEdu=true
+EnableEdu=false
 
 #WorldProvider=anvil
 WorldProvider=flat
