--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #UseEncryption=false
-#EnableEdu=true
+EnableEdu=true
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
@@ -29,5 +29,5 @@ TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpeContainerOpen=0
 TracePackets.Verbosity.McpeMapInfoRequest=0
 TracePackets.Verbosity.McpeClientboundMapItemData=0
-
-
+TracePackets.Verbosity.McpeMobArmorEquipment=1
+TracePackets.Verbosity.McpeMobEquipment=1
