--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -1,6 +1,6 @@
 #DO NOT REMOVE THIS LINE - MiNET Config
 #UseEncryption=false
-EnableEdu=true
+EnableEdu=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
