Added some new mobs. Fix some attributes and similar.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -2,7 +2,7 @@
 
 # Socket binding
 #ip=0.0.0.0
-port=19134
+#port=19134
 
 # Throttling
 MaxNumberOfPlayers=100
@@ -18,13 +18,13 @@ UseEncryption=false
 
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-EnableEdu=false
+EnableEdu=true
 
 #WorldProvider=anvil
 WorldProvider=flat
 
-ViewDistance=12
-MaxViewDistance=12
+ViewDistance=8
+MaxViewDistance=8
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -61,9 +61,9 @@ KeepInventory=true
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
-#PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
+PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
-PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
+#PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
 #PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
