--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -31,3 +31,4 @@ TracePackets.Verbosity.McpeMapInfoRequest=0
 TracePackets.Verbosity.McpeClientboundMapItemData=0
 TracePackets.Verbosity.McpeMobArmorEquipment=1
 TracePackets.Verbosity.McpeMobEquipment=1
+TracePackets.Verbosity.McpeExplode=1
