--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -371,9 +371,12 @@
     <Compile Include="Entities\Hostile\Shulker.cs" />
     <Compile Include="Entities\Hostile\SkeletonHorse.cs" />
     <Compile Include="Entities\Hostile\Stray.cs" />
+    <Compile Include="Entities\Hostile\Vex.cs" />
+    <Compile Include="Entities\Hostile\Wither.cs" />
     <Compile Include="Entities\Hostile\WitherSkeleton.cs" />
     <Compile Include="Entities\Npc.cs" />
     <Compile Include="Entities\Passive\Horse.cs" />
+    <Compile Include="Entities\Passive\Llama.cs" />
     <Compile Include="Entities\Passive\PolarBear.cs" />
     <Compile Include="Entities\Projectiles\Arrow.cs" />
     <Compile Include="Entities\Projectiles\Egg.cs" />
@@ -536,6 +539,7 @@
     <Compile Include="MotdProvider.cs" />
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="Net\ItemSigner.cs" />
+    <Compile Include="Net\McpeBossEvent.cs" />
     <Compile Include="Net\McpeText.cs" />
     <Compile Include="Net\PlayerAction.cs" />
     <Compile Include="Net\SplitPartPackage.cs" />
