Added gamerules and changed game mode settings. Fixed saving a bit. Need conversion still. Added some more block conversion that crashed the game if used on PC:

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -20,8 +20,8 @@ motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
 EnableEdu=true
 
-#WorldProvider=anvil
-WorldProvider=flat
+WorldProvider=anvil
+#WorldProvider=flat
 
 ViewDistance=8
 MaxViewDistance=8
@@ -61,7 +61,7 @@ KeepInventory=true
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
-PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
+#PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
 #PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
 #PCWaterOffset=30
@@ -80,6 +80,9 @@ PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
+#PCWorldFolder=D:\Development\Worlds\Quacktopia-Jun-12-2017\home\Quacktopia\world
+PCWorldFolder=D:\Temp\TestSave
+
 EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
@@ -90,7 +93,7 @@ PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Deb
 #PluginDisabled=true
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
