Some fixes to flatland generator and client.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,8 +23,8 @@ EnableEdu=true
 WorldProvider=anvil
 #WorldProvider=flat
 
-ViewDistance=8
-MaxViewDistance=8
+ViewDistance=16
+MaxViewDistance=16
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -76,21 +76,24 @@ KeepInventory=true
 #PCWaterOffset=60
 
 # GOOD HUBS
-#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
 #PCWorldFolder=D:\Development\Worlds\Quacktopia-Jun-12-2017\home\Quacktopia\world
-PCWorldFolder=D:\Temp\TestSave
+#PCWorldFolder=D:\Temp\TestSave
+#PCWorldFolder=D:\Temp\MCPEWorldStore
 
 EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
-
+#PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
+PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug;D:\Development\Repos\QuackCore\QuackCore\bin\Debug;
+PlotWord=D:\Temp\TestSave
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
 #PluginDisabled=true
+QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
 #BuilderBase.Enabled=false
