Fix conversion for slabs. Fixed hight calculation (forgot some comments).

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -87,10 +87,17 @@ PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-#PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
-PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug;D:\Development\Repos\QuackCore\QuackCore\bin\Debug;
-PlotWord=D:\Temp\TestSave
+PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
+#PluginDirectory=../../../TestPlugin/bin/Debug;D:\Development\Repos\QuackCore\QuackCore\bin\Debug;
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
+
+PlotWorld=D:\Temp\TestSave
+PlotStorage=D:\Temp\TestSave\plots
+PlayerDataDirectory=D:\Temp\TestSave\playerdata
+
+HorizontalSchematic=D:\Development\Worlds\QuackSchematics\horizontal.schematic
+VerticalSchematic=D:\Development\Worlds\QuackSchematics\vertical.schematic
+MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 
 #PluginDisabled=true
 QuackCore.Enabled=false
