Minor adjustment to Entity send of position (clone). Performance on Anvil readin improved by up to 50% in some cases.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,8 +23,8 @@ EnableEdu=true
 WorldProvider=anvil
 #WorldProvider=flat
 
-ViewDistance=16
-MaxViewDistance=16
+ViewDistance=8
+MaxViewDistance=8
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -103,7 +103,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
