--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="AStarNavigator" version="1.0.63" targetFramework="net461" />
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
-  <package id="jose-jwt" version="1.9.3" targetFramework="net46" />
+  <package id="Castle.Core" version="4.1.0" targetFramework="net461" />
+  <package id="jose-jwt" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="MiNET.fnbt" version="0.6.9" targetFramework="net461" />
-  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="Moq" version="4.7.49" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NUnit" version="3.7.1" targetFramework="net461" />
 </packages>
