Dimension changing. Trace stil not complete. Changed order of some player actions, but still not sure about the values. Something is missing for the change. Because of the dimension trace, also changed how spawn level with loading screen works. Should be more stable now and less "hacky".

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -32,3 +32,4 @@ TracePackets.Verbosity.McpeClientboundMapItemData=0
 TracePackets.Verbosity.McpeMobArmorEquipment=1
 TracePackets.Verbosity.McpeMobEquipment=1
 TracePackets.Verbosity.McpeExplode=1
+TracePackets.Verbosity.McpeEvent=1
