Tuned the dimension change a bit. Less packets. Working on block light calculations.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -24,7 +24,7 @@ WorldProvider=anvil
 #WorldProvider=flat
 
 ViewDistance=16
-MaxViewDistance=7
+MaxViewDistance=16
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -49,6 +49,7 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
@@ -76,12 +77,12 @@ KeepInventory=true
 #PCWaterOffset=60
 
 # GOOD HUBS
-PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
+#PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
 #PCWorldFolder=D:\Development\Worlds\4 Portal Hub by snyed
 #PCWorldFolder=D:\Development\Worlds\HubSpawn [By_ DoomGary]
 
 #PCWorldFolder=D:\Development\Worlds\Quacktopia-Jun-12-2017\home\Quacktopia\world
-#PCWorldFolder=D:\Temp\TestSave
+#PCWorldFolder=D:\Temp\EmptyWorld
 #PCWorldFolder=D:\Temp\MCPEWorldStore
 
 EnableCommands=true
