Nether, End. Bukkit structure of folders. Will ofc make vanilla too. Warning: I changed from "Default" to "overworld". If you have LevelManagers based on that, it might break.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -5,7 +5,7 @@
 #port=19134
 
 # Throttling
-MaxNumberOfPlayers=100
+MaxNumberOfPlayers=1000
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
@@ -49,7 +49,10 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
-PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+#PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+
+# Wworld with nether/end
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
@@ -104,7 +107,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
