WARNING: WorldProviders have changed. Flatland is no longer a world provider, and config does not work the same.  If you don't like it you can complani by opening an issue here https://github.com/pmmp/PocketMine-MP/issues

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -53,6 +53,7 @@ KeepInventory=true
 
 # Wworld with nether/end
 PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
