Update default server.conf to reflect changes and give good spawn on install.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -52,8 +52,8 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+PCWorldFolder=D:\Development\DOES NOT EXIST
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
