The beginning of basic plot server plugin.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -22,8 +22,8 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=8
-MaxViewDistance=8
+ViewDistance=32
+MaxViewDistance=16
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -51,8 +51,8 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+PCWorldFolder=D:\Development\DOES NOT EXIST
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
@@ -91,7 +91,7 @@ PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
-PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug
+PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug;../../../MiNET.Plotter/bin/Debug
 #PluginDirectory=../../../TestPlugin/bin/Debug;D:\Development\Repos\QuackCore\QuackCore\bin\Debug;
 #PluginDirectory=D:\Development\Other\MiNET.GameFramework\src\MiNET.GameFramework\MiNET.GameFramework.Plugin\bin\Debug;
 
@@ -107,6 +107,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
+Plotter.Enabled=true
 BuilderBase.Enabled=false
 Pets.Enabled=false
 
