--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -22,8 +22,8 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=32
-MaxViewDistance=16
+ViewDistance=16
+MaxViewDistance=8
 MoveRenderDistance=1
 CalculateLights=false
 CalculateLights.MakeMovie=false
@@ -53,6 +53,7 @@ KeepInventory=true
 # Wworld with nether/end
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
 #PCWorldFolder=D:\Temp\TestWorld
@@ -107,8 +108,8 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-Plotter.Enabled=true
-BuilderBase.Enabled=false
+#Plotter.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
