--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -108,7 +108,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#Plotter.Enabled=false
+Plotter.Enabled=false
 #BuilderBase.Enabled=false
 Pets.Enabled=false
 
