Update player action IDs

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -128,3 +128,4 @@ TracePackets.Verbosity.McpeResourcePackDataInfo=0
 TracePackets.Verbosity.McpeAdventureSettings=0
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpePlayerAction=1
+TracePackets.Verbosity.McpeInventoryTransactionPacket=1
