Log errors on disconnect. Then throws, same behavior for now, but with logging.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -41,7 +41,7 @@ GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
-IsWorldTimeStarted=true
+IsWorldTimeStarted=false
 KeepInventory=true
 
 # Bad light worlds
