Update recipes and creative inventory to 1.1.3. Update anvil mappings for new blocks. Added events for player ticking. Easier for simple plugins to work with.

--- a/src/MiNET/MiNET.Client/App.config
+++ b/src/MiNET/MiNET.Client/App.config
@@ -52,7 +52,7 @@
 		</appender>
 
 		<root>
-			<level value="ERROR"/>
+			<level value="DEBUG"/>
 			<appender-ref ref="Console"/>
 			<appender-ref ref="RollingFile"/>
 			<!--<appender-ref ref="DebuggerAppender"/>-->
