--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -22,7 +22,7 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=16
+ViewDistance=8
 MaxViewDistance=8
 MoveRenderDistance=1
 CalculateLights=false
@@ -51,8 +51,8 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # Wworld with nether/end
-#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
-PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
@@ -108,8 +108,8 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#Plotter.Enabled=false
-#BuilderBase.Enabled=false
+Plotter.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
