Fix light calculations for lava and nether.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -25,7 +25,7 @@ WorldProvider=anvil
 ViewDistance=8
 MaxViewDistance=8
 MoveRenderDistance=1
-CalculateLights=false
+CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Gamerules
@@ -51,7 +51,8 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
