Add config to force XBL logins. Fixed disconnect on faulty protocol version.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -12,6 +12,7 @@ MaxNumberOfPlayers=1000
 UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
+ForceXBLAuthentication=true
 
 #EnableStatistics=true
 #EnableSecurity=true
