More light updates. Probably shouldn't be used in production since it calculate height for all read chunks now (not fast enough).

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -38,7 +38,7 @@ GameMode=Creative
 #Difficulty=Easy
 #Difficulty=Normal
 #Difficulty=Hard
-#Difficulty=Hardcore
+#Difficulty=Hardcores
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
@@ -50,10 +50,12 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.inca
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
 #PCWorldFolder=D:\Development\Repos\MapsPE\sg.impact
+#PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
+
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
