--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -5,7 +5,7 @@ EnableEdu=false
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeAvailableCommands
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeStartGame=1
 TracePackets.Verbosity.McpeAdventureSettings=1
