--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -12,7 +12,7 @@ MaxNumberOfPlayers=1000
 UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
-ForceXBLAuthentication=true
+ForceXBLAuthentication=false
 
 #EnableStatistics=true
 #EnableSecurity=true
@@ -39,7 +39,7 @@ GameMode=Creative
 #Difficulty=Normal
 #Difficulty=Hard
 #Difficulty=Hardcores
-CheckForSafeSpawn=true
+#CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
 IsWorldTimeStarted=false
@@ -53,10 +53,10 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
