Work on transactions and inventory.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -11,8 +11,8 @@ TracePackets.Verbosity.McpeStartGame=1
 TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeAddPlayer=1
 TracePackets.Verbosity.McpeAddEntity=0
-TracePackets.Verbosity.McpeAddItemEntity=0
-TracePackets.Verbosity.McpeSetEntityMotion=0
+TracePackets.Verbosity.McpeAddItemEntity=1
+TracePackets.Verbosity.McpeSetEntityMotion=1
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeContainerSetContent=0
 TracePackets.Verbosity.McpeAnimate=1
@@ -33,3 +33,4 @@ TracePackets.Verbosity.McpeMobArmorEquipment=1
 TracePackets.Verbosity.McpeMobEquipment=1
 TracePackets.Verbosity.McpeExplode=1
 TracePackets.Verbosity.McpeEvent=1
+TracePackets.Verbosity.McpeInventoryTransaction=1
