--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -133,3 +133,6 @@ TracePackets.Verbosity.McpeAdventureSettings=0
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpePlayerAction=1
 TracePackets.Verbosity.McpeInventoryTransactionPacket=1
+TracePackets.Verbosity.McpePlayerHotbar=1
+TracePackets.Verbosity.McpeInventoryContent=1
+TracePackets.Verbosity.McpeInventoryTransaction=1
